diseño inicial html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,33 @@
-<button type="button" class="btn btn-primary">Primary</button>
-<button type="button" class="btn btn-secondary">Secondary</button>
-<button type="button" class="btn btn-success">Success</button>
-<button type="button" class="btn btn-danger">Danger</button>
-<button type="button" class="btn btn-warning">Warning</button>
-<button type="button" class="btn btn-info">Info</button>
-<button type="button" class="btn btn-light">Light</button>
-<button type="button" class="btn btn-dark">Dark</button>
+<div class="d-flex">
+  <!-- Sidebar -->
+  <div class="bg-dark border-right p-3" id="sidebar">
+    <h3 class="text-light">
+      Gifs-App
+    </h3>
+    <hr class="text-white">
+    <div class="list-group list-reset">
+      <a href="#" class="list-group-item list-group-item-action">
+      Dashboard
+      </a>
+    </div>
+  </div>
+  <!-- End Sidebar -->
+  <div class="container">
+    <div class="row p-3">
+
+      <div class="col">
+        <h5>Buscar:</h5>
+        <input type="text" class="from-control" placeholder="Buscar Gifs...">
+      </div>
+    </div>
+    <hr>
+
+    <div class="row">
+      <div class="col">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere soluta eligendi doloremque vel aut, ipsa quasi corrupti fugiat consectetur quo quia. Perferendis neque laborum rem, ad modi accusantium deserunt iure?
+      </div>
+    </div>
+
+
+  </div>
+</div>
