--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,9 @@
 <div class="d-flex">
   
   <!-- Sidebar -->
-<app-sidebar></app-sidebar>>
+<app-sidebar></app-sidebar>
   <!-- End Sidebar -->
 
-  <div class="container">
-    <div class="row p-3">
+ <app-gifs-page class="container"></app-gifs-page>
 
-      <div class="col">
-        <h5>Buscar:</h5>
-        <input type="text" class="from-control" placeholder="Buscar Gifs...">
-      </div>
-    </div>
-    <hr>
-
-    <div class="row">
-      <div class="col">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere soluta eligendi doloremque vel aut, ipsa quasi corrupti fugiat consectetur quo quia. Perferendis neque laborum rem, ad modi accusantium deserunt iure?
-      </div>
-    </div>
-
-
-  </div>
 </div>
